# GuessIt

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: index.html
src/sphinxy/: ai.py  config.py  game_logic.py  levels.py  log_config.py  play.py  pyproject.toml  utils.py
