[project]
name = "GuessIt"
version = "0.0.1"
description = "GuessIt is a puzzle name for those who like to be challenged."
authors = [{name="German Garcia", email="garferger@gmail.com"}]
dependencies = ["openai", "streamlit"]


[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
develop = [
    "black",
    "pre-commit",
    "flake8"
]
